alignment control style fix

--- a/inc/admin/css/admin.css
+++ b/inc/admin/css/admin.css
@@ -3902,7 +3902,7 @@ wptb_shortcode_container_element {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 300000;
+    z-index: 600000;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -4062,6 +4062,16 @@ wptb_shortcode_container_element {
 
 .wptb-control-media-clear-button span {
     transform: scale(1.8);
+}
+
+.wptb-controls-ul-row {
+    display: flex;
+}
+
+.wptb-button-svg-center {
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
 }
 
 
